syntax = "proto2";
package message.order;
message getShareCouponRequest {
    optional int64 user_id = 1;
    optional int64 pintuan_id = 2;
}